--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
         <section class="popular">
             <h2>ТОП-5 ПОПУЛЯРНЫХ БЛЮД</h2>
-            <table border="1">
+            <table>
                 <tr>
                     <th></th>
                     <th><b>Название</b></th>
