--- a/lunch.html
+++ b/lunch.html
@@ -3,6 +3,7 @@
 <head>
 
     <meta charset = 'UTF-8'>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel='stylesheet' href = 'style.css'>
     <link rel='stylesheet' href = 'lunch.css'>
     <link rel='preconnect' href='https://fonts.googleapis.com'>
@@ -131,7 +132,7 @@
                     <div class="dish-info">
                         <img class="card" src="pics/menu/beverages/applejuice.jpg" alt="">
                         <p class="dish-price">90&#8381;</p>
-                        <p class="dish-name">Яблочный суп</p>
+                        <p class="dish-name">Яблочный с</p>
                         <p class="dish-weight">300 г</p>
 
                         <button class="add-btn">Добавить</button>
